test/files/neg/typemacros-incomplete-b.scala
trait Test {
  type Foo[Int]
  (x: Int)
}